--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "rolldown": "^1.0.0-beta.46",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
